--- a/Week4Part1/app/src/main/AndroidManifest.xml
+++ b/Week4Part1/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Week4Part1"
         tools:targetApi="31">
         <activity
+            android:name=".DumbLayout"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
