--- a/week12-live-demo/pubspec.yaml
+++ b/week12-live-demo/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
     sdk: flutter
   provider:
 
+  camera:
+  path:
+  path_provider:
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
